--- a/renderer/index.html
+++ b/renderer/index.html
@@ -26,6 +26,10 @@
             </div>
         </div>
         <script src="../modules/clock.js"></script>
+<!--        <script src="../modules/photoBooth.js"></script>-->
+<!--        <script src="../modules/deletePhotos.js"></script>-->
+<!--        <script src="../modules/sensor.js"></script>-->
+<!--        <script src="../modules/sensorStart.js"></script>-->
         <script src="../modules/fb_post.js"></script>
         <script src="../modules/slack_post.js"></script>
 		<script src="../modules/student.js"></script>
