Updated manageDOM so buildPopup takes time parameter and array2Div takes time as second parameter

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -38,6 +38,6 @@
 		<script src="../src/auto_update.js"></script>
 		<script src="../src/inactive.js"></script>
         <script src="../src/mongoDB.js"></script>
-        <!-- <button onclick="updateNow()">Scale Teams</button> -->
+        <!-- <button onclick="getWeatherAtLocation()">Scale Teams</button> -->
     </body>
 </html>
