Fixed the help function, made cantina fonts bigger, fixed gifs to content div, full documentation for help function

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <!--script src="/src/jquery.min.js"></script-->
 
         <script>
             var command_execution = require('../src/command_execution.js');
@@ -26,11 +25,8 @@
             </div>
         </div>
         <script src="../modules/clock.js"></script>
-<!--        <script src="../modules/photoBooth.js"></script>-->
-<!--        <script src="../modules/deletePhotos.js"></script>-->
-<!--        <script src="../modules/sensor.js"></script>-->
-<!--        <script src="../modules/sensorStart.js"></script>-->
         <script src="../modules/fb_post.js"></script>
+        <script src="../modules/cantina.js"></script>
         <script src="../modules/slack_post.js"></script>
 		<script src="../modules/student.js"></script>
 		<script src="../modules/projects.js"></script>
@@ -38,6 +34,6 @@
 		<script src="../src/auto_update.js"></script>
 		<script src="../src/inactive.js"></script>
         <script src="../src/mongoDB.js"></script>
-        <!-- <button onclick="getWeatherAtLocation()">Scale Teams</button> -->
+        <button onclick="getMenu('today')">Scale Teams</button>
     </body>
 </html>
