--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,13 +9,20 @@
         <script>
             var command_execution = require('../src/command_execution.js');
             var marvin_reaction = require('../src/controller.js');
+            var dotenv = require("dotenv");
+            const result = dotenv.config();
+
+            if (result.error) {
+            throw result.error
+            }
+
             require('electron').ipcRenderer.on('sound', marvin_reaction.listen_gif);
             require('electron').ipcRenderer.on('todo', command_execution);
             require('electron').ipcRenderer.on('delete_gif', marvin_reaction.empty_response);
         </script>
     </head>
 
-    <body onload="socialMedia(), get_post_text(), get_slack_post_text(), clock.dateTime(), connectDB()" id="body">
+    <body onload="socialMedia(), slackInterval(), fbInterval(), clock.dateTime(), connectDB()" id="body">
         <div class="wrapper">
             <div class="date-time" id="date-time"></div>
             <div class="box content" id="content"></div>
