updated photoBooth from Pi

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -31,6 +31,8 @@
                 <div class="posts" id="slack_post"></div> -->
             </div>
         </div>
+        <!--<div><button onclick='photo()' style="color: white;"</div>
+		<script src="../modules/photoBooth.js"></script> -->
         <script src="../modules/clock.js"></script>
         <script src="../modules/fb_post.js"></script>
         <script src="../modules/slack_post.js"></script>
