added author things, cleaned up a little bit, took config off gitignore

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -26,10 +26,7 @@
         <div class="wrapper">
             <div class="date-time" id="date-time"></div>
             <div class="box content" id="content"></div>
-            <div class="box announcements" id="announcements">
-                <!-- <div class="posts" id="fb_post"></div>
-                <div class="posts" id="slack_post"></div> -->
-            </div>
+            <div class="box announcements" id="announcements"></div>
         </div>
         <!--<div><button onclick='photo()' style="color: white;"</div>
 		<script src="../modules/photoBooth.js"></script> -->
