hey marvin, what's up?

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -28,8 +28,14 @@
             <div class="box content" id="content"></div>
             <div class="box announcements" id="announcements"></div>
         </div>
-        <!--<div><button onclick='photo()' style="color: white;"</div>
-		<script src="../modules/photoBooth.js"></script> -->
+
+        <!-- <div>
+            <button onclick='howAreYou()' style="color: white;">
+                How Are You
+            </button>
+        </div>
+        <script src="../modules/howAreYou.js"></script> -->
+        
         <script src="../modules/clock.js"></script>
         <script src="../modules/fb_post.js"></script>
         <script src="../modules/slack_post.js"></script>
