--- a/renderer/index.html
+++ b/renderer/index.html
@@ -28,6 +28,7 @@
             <div class="box content" id="content"></div>
             <div class="box announcements" id="announcements"></div>
         </div>
+		<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
         <!--<div><button onclick='photo()' style="color: white;"</div>
 		<script src="../modules/photoBooth.js"></script> -->
         <script src="../modules/clock.js"></script>
